<resources>
    <string name="app_name">MY-PT</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="user_loggedin">User LoggedIN</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_diet">diet</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="diet">Diet</string>
    <string name="diet_pdf">Diet Pdf</string>
    <string name="title_activity_pdf">pdf</string>
    <string name="buttonView" />
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="display">Display</string>
    <string name="Name">Name</string>
    <string name="retrive">Retrive</string>
    <string name="save">Save</string>
    <string name="weight">Weight</string>
    <string name="title_activity_tracker">tracker</string>
    <string name="remaining">remaining</string>
    <string name="food">food</string>
    <string name="button">Button</string>
    <string name="goal">goal</string>
    <string name="this_is_tab_1">This is tab 1</string>
    <string name="this_is_tab_2">This is tab 2</string>
    <string name="this_is_tab_3">This is tab 3</string>
    <string name="this_is_tab_4">This is tab 4</string>
    <string name="food_bank">Food Bank</string>
    <string name="add_lunch">Add Lunch</string>
    <string name="add_dinner">Add Dinner</string>
    <string name="add_snacks">Add Snacks</string>
    <string name="add_breakfast">Add breakfast</string>
</resources>
