<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andrew.my_pt.tracker"
    tools:showIn="@layout/activity_tracker">

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/remaining"
        android:layout_alignEnd="@+id/remaining" />

    <TextView
        android:text="@string/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goal"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remaining"
        tools:ignore="RelativeOverlap,UnknownId"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TabHost
        android:layout_width="200dip"
        android:layout_height="300dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button2"
        android:id="@+id/tabHost"
        android:layout_below="@+id/goal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="255dp"
                        android:text="@string/this_is_tab_1"
                        android:layout_weight="0.03"
                        tools:ignore="InefficientWeight" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/this_is_tab_2" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/this_is_tab_3" />


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/this_is_tab_4" />


                </LinearLayout>

                <Button
                    android:layout_margin="15dp"
                    android:id="@+id/foodbank"
                    android:text="Food Bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <TextView
        android:text="@string/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/food"
        android:textAppearance="@style/TextAppearance.AppCompat"
        tools:ignore="UnknownId"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
