<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_userinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">
    tools:context="com.example.andrew.my_pt.userinfo">

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/retrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retrive"
        android:layout_above="@+id/save"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType=""
        android:text="@string/height"
        android:ems="10"
        android:layout_below="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_marginTop="28dp"
        android:id="@+id/height"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/age"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/weight"
        android:id="@+id/age"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Name"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:id="@+id/name"
        tools:ignore="LabelFor,RelativeOverlap"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType=""
        android:text="@string/weight"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/weight"
        tools:ignore="LabelFor,TextFields"
        android:layout_below="@+id/height"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="HEIGHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/height"
        android:layout_above="@+id/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="HardcodedText,UnknownId" />

    <TextView
        android:text="Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/weight"
        android:layout_alignBottom="@+id/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6"
        android:layout_above="@+id/height"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="HardcodedText"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:text="Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/age"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/display"
        tools:ignore="LabelFor"
        android:layout_marginBottom="29dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView8"
        android:layout_marginStart="21dp" />

    <TextView
        android:text="Activity Level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="HardcodedText"
        android:layout_above="@+id/ratingBar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_above="@+id/retrive"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
