<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:MY-PT="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:ignore="ExtraText"><![CDATA[
    tools:context="com.example.andrew.my_pt.UserAct">

    ]]>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <TextView
            android:text="@string/user_loggedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />
        <TextView
            android:text="User LoggedIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/useremail"
            tools:ignore="HardcodedText" />



        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonLogout"
            android:text="@string/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonUserInfo"
            android:text="User information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />
        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonPdf"
            android:text="@string/diet_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            tools:ignore="ObsoleteLayoutParam" />

        <Button
            android:text="tracker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tracker"
            tools:ignore="HardcodedText" />


    </LinearLayout>
</RelativeLayout>
